--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
+    "dotenv": "^16.0.0",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.4.0",
+    "nanoid": "^3.3.4",
+    "next": "^12.1.6",
+    "node-sass": "^6.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
